# VersaAI

./: .clang-format  .clang-tidy  .cursorrules  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  EULA.txt  README.md  debug_imports.py  download_model.py  launch.sh  pyproject.toml  start_editor_bridge.py  test_coding_agent_cli.py  test_mandate.cpp  test_mandate.sh  test_mandate_demo.sh  verify_agents.py  verify_chat_integration.py  verify_code_model.py  verify_setup.py  versaai_cli.py
.github/: AI_BEHAVIOR_MANDATE.md  CLAUDE.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: build-auto.yml  build.yml  clang_tidy.yml  clang_tidy_post.yml  close_spam.yml  lint_commit.yml  precommit.yml
bindings/: CMakeLists.txt  README.md  versaai_bindings.cpp.full  versaai_bindings_v2.cpp  versaai_core_backup.cpp  versaai_core_full.cpp  versaai_core_full.cpp.backup
config/: default.yaml
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: api.ts  main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
docs/: ACTION_PLAN.md  AI_BEHAVIOR_MANDATE_IMPLEMENTATION_SUMMARY.md  AI_BEHAVIOR_MANDATE_INTEGRATION.md  AI_BEHAVIOR_MANDATE_USER_GUIDE.md  Architecture.md  Architecture_Hybrid.md  BEHAVIOR_MANDATE_FLOW_DIAGRAM.md  BEHAVIOR_MANDATE_INDEX.md  BEHAVIOR_MANDATE_README.md  CODE_ASSISTANT_COMPLETE.md  CODE_ASSISTANT_INTEGRATION.md  CODE_EDITOR_INTEGRATION.md  CODE_MODEL_COMPLETE.md  CODE_MODEL_QUICK_REFERENCE.md  CODE_MODEL_SESSION_SUMMARY.md  CODE_MODEL_STATUS.md  CODE_MODEL_TRAINING_RESOURCES.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_USER_GUIDE.md  CONTRIBUTING.md  ChatbotAI_General.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_INDEX.md  Development_Roadmap.md  EDITOR_INTEGRATION_README.md  Error_Handling.md  FILES_CREATED.md  FINAL_STATUS.md  FLUTTER_FIX_SUMMARY.md  FLUTTER_INTEGRATION_STATUS.md  FLUTTER_QUICKSTART.md  FLUTTER_UI_COMPLETE.md  FLUTTER_UI_INTEGRATION.md  FLUTTER_UI_INTEGRATION_COMPLETE.md  GET_STARTED.md  HYBRID_ARCHITECTURE_STATUS.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_ENGINE_COMPLETE.md  INSTALL.md  INTEGRATION_COMPLETE.md  (+59 more)
examples/: code_assistant_demo.py  code_assistant_example.py  mandate_integration_example.cpp  memory_demo.py  model_loader_example.cpp  phase1_demo.cpp  rag_example.py
include/: BehaviorPolicy.hpp  VersaAIAgentRegistry.hpp  VersaAIContext.hpp  VersaAIContext_v2.hpp  VersaAIDependencyInjection.hpp  VersaAIErrorRecovery.hpp  VersaAIException.hpp  VersaAIGGUFLoader.hpp  VersaAIGPUAccelerator.hpp  VersaAIInferenceEngine.hpp  VersaAILogger.hpp  VersaAIMemoryPool.hpp  VersaAIModel.hpp  VersaAIModelBase.hpp  VersaAIModelFormat.hpp  VersaAIModelLoader.hpp  VersaAIModelRegistry.hpp  VersaAIONNXLoader.hpp  VersaAIRegistry.hpp  VersaAISafeTensorsLoader.hpp  VersaAITensor.hpp  VersaAITokenizer.hpp
plugins/: PLUGIN_API.md
plugins/blender/: AdvancedTasks.md  AssetLibraryIntegration.md  PlanningWorkflow.md  README.md  SupportedCommands.md  versaai_blender_addon.py
plugins/unity/: VersaAIUnityEditor.cs
plugins/unreal/: VersaAIUnrealPlugin.cpp  VersaAIUnrealPlugin.h
scripts/: build.cmd  build.ps1  build.sh  download_all_models.py  download_code_models.py  download_models.py  launch_code_assistant.sh
src/agents/: AgentBase.cpp  AgentBase.hpp  CMakeLists.txt  DevelopmentAgent.cpp  DevelopmentAgent.hpp  ModelingAgent.cpp  ModelingAgent.hpp  OSAgent.cpp  OSAgent.hpp  VGEAgent.cpp  VGEAgent.hpp  VGEDialogueManager.hpp  VGEIntentParser.hpp  VGEPlanningAgent.hpp
src/api/: ApiInterface.cpp  ApiInterface.hpp  CMakeLists.txt
src/chatbots/: CMakeLists.txt  ChatbotAI.cpp  ChatbotAI.hpp  DevelopmentChatbot.cpp  DevelopmentChatbot.hpp  VGEChatbot.cpp  VGEChatbot.hpp  VersaAIChatbot.cpp  VersaAIChatbot.hpp  VersaModelingChatbot.cpp  VersaModelingChatbot.hpp  VersaOSChatbot.cpp  VersaOSChatbot.hpp
src/core/: BehaviorPolicy.cpp  VersaAIContext_v2.cpp  VersaAICore.cpp  VersaAICore.hpp  VersaAIErrorRecovery.cpp  VersaAIException.cpp  VersaAILogger.cpp  VersaAIModel.cpp  VersaAIModelRegistry.cpp  VersaAITensor.cpp  logger_demo.cpp  main.cpp
src/models/: CMakeLists.txt  ModelBase.hpp  VGEKnowledgeBase.hpp  VersaAIGGUFLoader.cpp  VersaAIModelLoader.cpp  VersaAIONNXLoader.cpp  VersaAISafeTensorsLoader.cpp
tests/: test_agents_and_features.py  test_behavior_mandate.cpp  test_code_llm_integration.py  test_editor_bridge.py  test_flutter_integration.py  test_generation_and_companion.py  test_inference_engine.cpp  test_integration.py  test_model_loaders.cpp  test_model_router.py  test_safety.py
tests/rag/: test_rag_system.py
tests/unit/: test_memory.py
ui/: README.md  pubspec.yaml
ui/linux/: CMakeLists.txt
ui/scripts/: run_with_backend.bat  run_with_backend.sh  test_integration.sh
ui/test/: widget_test.dart
ui/web/: index.html  manifest.json
ui/windows/: CMakeLists.txt
versaai/: __init__.py  cli.py  config.py  core.py  multimodal.py  profiles.py
versaai/agents/: __init__.py  agent_base.py  coding_agent.py  companion_agent.py  image_gen_agent.py  llm_client.py  model_gen_agent.py  orchestrator.py  planning.py  planning_agent.py  reasoning.py  reasoning_agent.py  research_agent.py  video_gen_agent.py
versaai/api/: __init__.py  app.py  errors.py  provider_registry.py  schemas.py
versaai/code_editor_bridge/: __init__.py  chat_service.py  completion_service.py  server.py
versaai/generation/: __init__.py  base.py  image_gen.py  manager.py  model_3d_gen.py  video_gen.py
versaai/memory/: __init__.py  context_window.py  conversation.py  episodic.py  knowledge_graph.py  persistence.py  state.py  vector_db.py
versaai/models/: __init__.py  code_llm.py  code_model.py  gguf_model.py  huggingface_model.py  llamacpp_provider.py  model_base.py  model_ensemble.py  model_registry.py  model_router.py  (+2 more)
(+55 files in other folders)
